--- a/docs/random-beacon/beacon-signature-share-verfication.adoc
+++ b/docs/random-beacon/beacon-signature-share-verfication.adoc
@@ -44,38 +44,16 @@ and so on for a total of `sum(i in [1 .. m], choose(H+i, i))` attempts
 
 === Implementation
 
-When receiving signature shares from other members in the signing group,
-the shares are verified using the senders' individual private keys
-stored at the conclusion of the DKG.
-Invalid signature shares are rejected.
+When receiving signature shares from other members in the signing group, the shares are verified using the senders' individual private keys stored at the conclusion of the DKG. Invalid signature shares are rejected.
 
 ==== Verifying signature shares
 
-When `P_j` creates a signature share `Share_j`
-as a member of `Group_k` producing a threshold signature for `Entry_e`,
-the share must be broadcast to the other members
-in a message containing:
+When `P_j` creates a signature share `Share_j` as a member of `Group_k` producing a threshold signature for `Entry_e`, the share must be broadcast to the other members in a message containing:
 
 * the signature share `Share_j`
 * the member index `j` of the sender `P_j`;
 
-When `P_i` receives a signature share `Share_j` broadcast by `P_j`,
-the share can be verified by `blsVerify(Share_j, y_j, Input_e)`.
-If `Share_j` is valid,
-`P_i` can use it for reconstructing the threshold signature.
-If `Share_j` is invalid,
-`P_i` must not use it for reconstructing the entry.
-
-=== Limitations
-
-Operators can still broadcast invalid shares with inpunity,
-as failing the share verification has no consequences to the sender.
-
-== Future Work
-
-It is possible to validate signature-shares on-chain
-and thus punish operators who broadcast invalid shares.
-This approach is explored in RFC 10.
+When `P_i` receives a signature share `Share_j` broadcast by `P_j`, the share can be verified by `blsVerify(Share_j, y_j, Input_e)`. If `Share_j` is valid, `P_i` can use it for reconstructing the threshold signature. If `Share_j` is invalid, `P_i` must not use it for reconstructing the entry.
 
 [bibliography]
 == Related Links
