--- a/docs/random-beacon/dkg-voting-update.adoc
+++ b/docs/random-beacon/dkg-voting-update.adoc
@@ -7,37 +7,28 @@ toc::[]
 === DKG Phase 13
 
 ===== Off-chain
-Once the result has been determined, all participants evaluate the hash of their
-preferred result, sign the hash and broadcast the hash and a signature over it
-in the group broadcast channel. Each participant collects the signatures
-matching their preferred result, stores them along with the signers' member
-indices.
+Once the result has been determined, all participants evaluate the hash of their preferred result, sign the hash and broadcast the hash and a signature over it
+in the group broadcast channel. Each participant collects the signatures matching their preferred result, stores them along with the signers' member indices.
 
-If the signature of hash broadcasted off-chain is invalid, it should be rejected
-and not published to the chain in the next phase.
+- If the signature of hash broadcasted off-chain is invalid, it will be rejected and not published to the chain in the next phase.
 
-If multiple signatures from the same member on the same result are found, they
-should all be filtered-out so that none of them is published to the chain in the
-next phase.
+- If multiple signatures from the same member on the same result are found, they will all be filtered-out so that none of them is published to the chain in the next phase.
 
-If multiple signatures from the same member on different results are found, they
-should all be filtered-out so that none of them is published to the chain in the
-next phase.
+If multiple signatures from the same member on different results are found, they should all be filtered-out so that none of them is published to the chain in the next phase.
 
 === DKG Phase 14
 
 ===== Off-chain
-When a participant becomes eligible to submit the result (with supporting
-signatures) on-chain they submit if they have at least the honest majority
-(marked as `H` - constant for the given group size) of signatures for that
-result (including their own). 
+When a participant becomes eligible to submit the result (with supporting signatures) on-chain they submit if they have at least the honest majority (marked as `H` - constant for the given group size) of signatures for that result (including their own. 
 
-_First player_ is always eligible to submit the result. _Second player_ becomes
-eligible after initial timeout (time necessary to perform DKG protocol plus step
-time `T_dkg + T_step`) and remains eligible until the result is accepted by the
-chain. In other words, _Nth player_ becomes eligible to submit the result after
-`T_dkg + (N-1) * T_step` and remains eligible until the result is accepted by
-the chain. If _first player_ is late and _second player_ tries to submit,
+_First player_ is always eligible to submit the result. 
+
+_Second player_ becomes eligible after initial timeout (time necessary to perform DKG protocol plus step time `T_dkg + T_step`) and remains eligible until the result is accepted by the chain. 
+
+In other words, _Nth player_ becomes eligible to submit the result after `T_dkg + (N-1) * T_step` and remains eligible until the result is accepted by
+the chain. 
+
+If _first player_ is late and _second player_ tries to submit,
 whichever gets mined first wins and subsequent submissions are disregarded
 immediately to avoid burdening the loser with excess gas fees.
 
